--- a/src/css/home.less
+++ b/src/css/home.less
@@ -241,11 +241,13 @@ img {
 }
 .navFlot {
     width: 260px;
-    border-right: 1px solid rgb(228, 225, 225);
+    
+    //box-shadow:2px 2px 2px #cccccc;
     position: absolute;
     z-index: 9999;
-    bottom: 44px;
+    bottom: 50px;
     top: 60px;
+    background-color:#fff
 }
 .title-name {
     font-size: 24px;
