--- a/src/css/login.less
+++ b/src/css/login.less
@@ -1,6 +1,6 @@
-.page-login:before {
-  background-image: url("/img/login.jpg");
-}
+// .page-login:before {
+//   background-image: url("/img/login.jpg");
+// }
 
 .page-login form {
   width: 340px;
@@ -12,15 +12,31 @@
 }
 
 .page-login .form-control, .page-login .floating-label, .page-login .form-control:focus + .floating-label {
-  color: #bdbdbd;
+  color: #ffffff;
 }
 
 .page-login a {
-  color: #9fa8da;
+  color: #ffffff;
 }
+
+.page-copyright>p{color:white;}
 
 @media (max-width: 767px) {
   .page-login form {
     width: auto;
   }
 }
+
+h3.brand-text{color:white;}
+
+div.page-login{
+background-image: url(/img/login-bg.jpg);
+background-position: center center;
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+background-color: #ffffff;
+}
+
+div.login-area-bg{position:absolute;top:0;bottom:0;left:0;right:0;background-color:#0f2185;border:1px solid #0f2155;opacity:0.5;z-index:0;border-radius:8px;box-shadow: 4px 4px 4px #0f0135;}
+div.login-area{position:relative;}
