--- a/src/css/site.less
+++ b/src/css/site.less
@@ -162,9 +162,9 @@ body, html {
     transition: .3s ease all;
 }
 .page-copyright {
-    margin-top: 60px;
+    margin-top: 20px;
     font-size: .858rem;
-    color: #424242;
+    color: #fff;
     letter-spacing: 1px;
 }
 
