编辑和弹窗调整

--- a/src/css/list.less
+++ b/src/css/list.less
@@ -67,3 +67,12 @@
 .el-tag{
   margin-left: 10px;
 }
+.el-dialog__header{
+  padding: 20px 20px 10px;
+  background-color: #e4e4e4;
+}
+.el-dialog__headerbtn .el-dialog__close
+{
+  color: #909399;
+  font-size: 20px;
+}
