--- a/src/assets/theme/list.less
+++ b/src/assets/theme/list.less
@@ -121,18 +121,18 @@
   opacity:0.1;
   z-index: 1000;
 }
-//弹窗样式
-.el-dialog
-{
-  width: 60%;
-  .el-dialog__header{
-    padding: 10px 20px 10px;
-    background-color: #e4e4e4;
-    .el-dialog__headerbtn{
-      top:10px;
-    }
-  }
-  .el-dialog__body{
-    padding:0;
-  };
-}
+// //弹窗样式
+// .el-dialog
+// {
+//   //width: 60%;
+//   .el-dialog__header{
+//     padding: 10px 20px 10px;
+//     background-color: #e4e4e4;
+//     .el-dialog__headerbtn{
+//       top:10px;
+//     }
+//   }
+//   .el-dialog__body{
+//     padding:0;
+//   };
+// }
