--- a/src/assets/theme/home.less
+++ b/src/assets/theme/home.less
@@ -270,6 +270,7 @@ img {
      bottom:33px;
      top: 60px;
     background-color:#fff;
+    border-right: 1px solid rgb(228, 225, 225);
 }
 body {
     font-family: Tahoma,Helvetica,Arial,'宋体',sans-serif;
