--- a/src/assets/theme/list.less
+++ b/src/assets/theme/list.less
@@ -26,7 +26,7 @@
     .header {
       border-bottom: 1px solid #eeeeee;
       overflow: hidden;
-      margin: 10px 0;
+      margin: 10px 0 0 0;
       height: 60px;
       line-height: 60px;
       min-height: 60px;
@@ -36,8 +36,10 @@
     }
     .pagination {
       text-align: right;
-      margin-top: 10px;
-      min-height: 32px;
+      /* margin-top: 10px; */
+      padding: 5px 0;
+      min-height: 42px;
+      border-top: 1px solid rgb(228, 225, 225);
     }
   }
 }
