--- a/src/assets/theme/edit.less
+++ b/src/assets/theme/edit.less
@@ -5,8 +5,8 @@
     flex: 1;
     flex-direction: column;
     .operation{
-        /* padding: 10px 30px 10px 30px; */
-        background-color: #f2f1f7;
+        /* padding: 10px 30px 10px 30px; 
+        background-color: #f2f1f7;*/
         border-top: 1px solid #e6e6e6;
         text-align: right;
         min-height: 60px;
@@ -16,8 +16,32 @@
     .el-form{
         max-height: 400px;
         overflow: auto;
-        .el-form-item{
-            margin: 22px 20px;
+        .el-row{
+            margin: 10px 20px 0 20px;
+        }
+        .el-form-item {
+            margin-bottom: 0;
+            .el-form-item__error{
+                color: #f56c6c;
+                font-size: 12px;
+                line-height: 1;
+                padding-top: 3px;
+                position: static;
+                /* top: 100%; */
+                /* left: 0; */
+            }
+            .el-checkbox+.el-checkbox {
+                margin-left: 0px;
+            }
+            .el-checkbox {
+                margin-right: 10px;
+            }
+            .el-radio+.el-radio {
+                margin-left: 0;
+            }
+            .el-radio {
+                margin-right: 10px;
+            }
         }
     }
 }
@@ -33,8 +57,9 @@
         margin: 0;
         height: 60px;
         line-height: 60px;
-        background-color: #e3e4ea;
-        /* position: absolute; */
+        border-bottom: 1px solid #e3e4ea;
+         /*background-color: #e3e4ea;
+        position: absolute; */
         /* top: 2px; */
         /* left: 0; */
         /* right: 0; */
@@ -49,50 +74,55 @@
         overflow: auto;
         /* margin: 10px 0 0 0; */
         padding: 20px 20px 0 20px;
+        .el-form-item {
+            margin-bottom: 5px;
+            .el-form-item__error{
+                color: #f56c6c;
+                font-size: 12px;
+                line-height: 1;
+                padding-top: 3px;
+                position: static;
+                /* top: 100%; */
+                /* left: 0; */
+            }
+            .el-checkbox+.el-checkbox {
+                margin-left: 0px;
+            }
+            .el-checkbox {
+                margin-right: 10px;
+            }
+            .el-radio+.el-radio {
+                margin-left: 0;
+            }
+            .el-radio {
+                margin-right: 10px;
+            }
+        }
     }
     .operation{
         padding: 10px 30px 10px 30px;
         /* position: absolute; */
         /* left: 0; */
         /* right: 0; */
-        /* bottom: 0; */
-        background-color: #f2f1f7;
+        /* bottom: 0; 
+        background-color: #f2f1f7;*/
         /* z-index: 1000; */
         border-top: 1px solid #e6e6e6;
         text-align: right;
         min-height: 60px;
     }
 }
-.passwordedit{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    .operation{
-        /* padding: 10px 30px 10px 30px; */
-        background-color: #f2f1f7;
-        border-top: 1px solid #e6e6e6;
-        text-align: right;
-        min-height: 60px;
-        line-height: 60px;
-        padding-right: 40px;
-    }
-    .el-form{
-        max-height: 400px;
-        overflow: auto;
-        .el-form-item{
-            margin: 22px 20px;
-        }
-    }
-}
 //弹窗样式
 .el-dialog
 {
   //width: 60%;
+  overflow: hidden;
+  border-radius: 4px;
+  box-shadow: 0px 0px 1.5rem rgba(0,0,0,0.5);
   .el-dialog__header{
     padding: 10px 20px 10px;
-    background-color: #e4e4e4;
+    // background-color: #e4e4e4;
+    border-bottom: 1px solid #e4e4e4;
     .el-dialog__headerbtn{
       top:10px;
     }
