--- a/src/assets/theme/list.less
+++ b/src/assets/theme/list.less
@@ -3,76 +3,126 @@
   line-height: 40px;
   height: 40px;
   padding: 0;
-  font-family: monospace;
+  font-family:Tahoma,Helvetica,Arial,sans-serif,"微软雅黑";
+  color: #444;
 }
 .el-table th
 {
   line-height: 45px;
   height: 45px;
   padding: 0;
-  font-family: monospace;
-  color: #616060;
+  font-family: Tahoma,Helvetica,Arial,sans-serif,"微软雅黑";
+  color: #444;
 }
 .userlist {
-  /* min-height: 95%; */
-   padding: 0 20px;
+  /* min-height: 95%;
+   padding: 0 20px; */
+   width: 100%;
   display: flex;
   height: calc(100vh - 60px - 33px);
   .content{
     display: flex;
     flex-direction: column;
     flex: 1;
-    width: 100%;
+    width: 0;
+    padding: 0 20px;
     .header {
       border-bottom: 1px solid #eeeeee;
       overflow: hidden;
-      margin: 10px 0 0 0;
-      height: 60px;
-      line-height: 60px;
-      min-height: 60px;
+      //margin: 10px 0 0 0;
+      height: 66px;
+      line-height: 66px;
+      min-height: 66px;
     }
     .table-wrap{
       overflow: auto;
+      .editCellText{
+        width: 100%;
+        padding: 0;
+        .el-input__inner{
+          padding: 3px;
+        }
+      }
+      .editCellNumber{
+        width: 100%;
+        padding: 0;
+        .el-input__inner{
+          padding-left: 3px;
+          padding-right: 30px;
+        }
+      }
+      .editCellDateTime{
+        width: 100%;
+        padding: 0;
+        .el-input__inner{
+          padding-right: 15px;
+        }
+      }
     }
     .pagination {
       text-align: right;
       /* margin-top: 10px; */
-      padding: 5px 0;
-      min-height: 42px;
-      border-top: 1px solid rgb(228, 225, 225);
+      padding: 5px 0 7px 0;
+      min-height: 45px;
+      border-top: 1px solid #e4e1e1;
     }
   }
 }
-.searchWhere {
+.searchWhereSuspend{
   position: absolute;
-  top: 60px;
+  top: 60px; 
   right: 0;
+  bottom: 0;
+  z-index: 1001; 
+}
+.searchWhere {
+  /* position: absolute; */
+  /* top: 60px; */
+  /* right: 0; */
   background-color: #fff;
-  bottom: 33px;
-  z-index: 1001;
-  border-left: 1px solid rgb(230, 230, 230);
+  /* bottom: 0; */
+  /* z-index: 1001; */
+  border-left: 1px solid #e6e6e6;
+  min-width: 230px;
   .title {
     background-color: #f3f2f2;
     padding: 10px 10px;
     font-size: 15px;
+    .font{
+      margin: 0 0 0 5px;
+      font-family: monospace;
+      font-size: 15px;
+      font-weight: 600;
+    }
+    .icon-conditions{
+      font-size: 14px;
+    }
     .icon-close {
-      position: absolute;
-      right: 10px;
+      /* position: absolute; */
+      /* right: 10px; */
+      float: right;
+      cursor:pointer;
     }
     .icon-lockpage {
-      position: absolute;
-      right: 20px;
+      /* position: absolute; */
+      /* right: 20px; */
+      float: right;
       font-size: 20px;
+      cursor:pointer;
     }
     .icon-notlockpage {
-      position: absolute;
-      right: 20px;
+      /* position: absolute; */
+      /* right: 20px; */
+      float: right;
       font-size: 20px;
+      cursor:pointer;
     }
     .icon-min {
-      position: absolute;
-      right: 45px;
+      /* position: absolute; */
+      /* right: 45px; */
+      float: right;
       font-size: 18px;
+      cursor:pointer;
     }
   }
   .where {
@@ -83,17 +133,17 @@
   }
 }
 .title-name {
-    font-size: 24px;
-    color: #444444;
-    margin-right: 15px;
-    font-weight: bold;
+    font-size: 16px;
+    color: #333;
     font-family: "黑体";
 }
-.title-names {
-    font-size: 20px;
-    color: #444444;
-    margin-right: 15px;
-    font-weight: bold;
+.title-name-over{
+  color: #999;
+  margin: 0 3px 0 8px;
+}
+.title-name-item {
+    font-size: 16px;
+    color: #409EFF;
     font-family: "黑体";
 }
 .el-button{
@@ -103,10 +153,6 @@
 }
 .el-tag{
   margin-left: 10px;
-}
-.el-dialog__header{
-  padding: 20px 20px 10px;
-  background-color: #e4e4e4;
 }
 .el-dialog__headerbtn .el-dialog__close
 {
@@ -123,18 +169,7 @@
   opacity:0.1;
   z-index: 1000;
 }
-// //弹窗样式
-// .el-dialog
-// {
-//   //width: 60%;
-//   .el-dialog__header{
-//     padding: 10px 20px 10px;
-//     background-color: #e4e4e4;
-//     .el-dialog__headerbtn{
-//       top:10px;
-//     }
-//   }
-//   .el-dialog__body{
-//     padding:0;
-//   };
-// }
+.menumore{
+  padding: 0 10px;
+  height: 50px;
+}
